kafka2mongodb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: camel-kafka2mongodb
    app.kubernetes.io/component: camel-kafka2mongodb
    app.kubernetes.io/instance: camel-kafka2mongodb
  name: camel-kafka2mongodb
  namespace: VAR.NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: camel-kafka2mongodb
  template:
    metadata:
      labels:
        deployment: camel-kafka2mongodb
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: deployment
                operator: In
                values:
                - camel-kafka2mongodb
            topologyKey: kubernetes.io/hostname
      containers:
      - image: VAR.IMAGE.KAFKA2MONGODB
        name: camel-kafka2mongodb
        ports:
        - containerPort: 8778
          protocol: TCP
          name: jolokia
        - containerPort: 9779
          protocol: TCP
          name: web
        resources: 
          limits:
            memory: VAR.KAFKA2MONGODB.MEMORY
            cpu: VAR.KAFKA2MONGODB.CPU
          requests:
            cpu: VAR.KAFKA2MONGODB.CPU
            memory: VAR.KAFKA2MONGODB.MEMORY
        volumeMounts:
        - mountPath: /deployments/config/application.properties
          name: camel-kafka2mongodb-config
          subPath: application.properties
      volumes:
      - configMap:
          defaultMode: 420
          name: camel-kafka2mongodb-config
        name: camel-kafka2mongodb-config
