paho2kafka.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: camel-paho2kafka
    app.kubernetes.io/component: camel-paho2kafka
    app.kubernetes.io/instance: camel-paho2kafka
  name: camel-paho2kafka
  namespace: VAR.NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: camel-paho2kafka
  template:
    metadata:
      labels:
        deployment: camel-paho2kafka
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: deployment
                operator: In
                values:
                - camel-paho2kafka
            topologyKey: kubernetes.io/hostname
      containers:
      - image: VAR.IMAGE.AMQBROKER.PAHO2KAFKA
        name: camel-paho2kafka
        ports:
        - containerPort: 8778
          protocol: TCP
          name: jolokia
        - containerPort: 9779
          protocol: TCP
          name: web
        resources: 
          limits:
            memory: VAR.PAHO2KAFKA.MEMORY
            cpu: VAR.PAHO2KAFKA.CPU
          requests:
            cpu: VAR.PAHO2KAFKA.CPU
            memory: VAR.PAHO2KAFKA.MEMORY
        volumeMounts:
        - mountPath: /deployments/config/application.properties
          name: camel-paho2kafka-config
          subPath: application.properties
      volumes:
      - configMap:
          defaultMode: 420
          name: camel-paho2kafka-config
        name: camel-paho2kafka-config
